management/monitoring/kube-prometheus/grafana-env.yaml
---
###################################################
# Grafana SMTP Config
###################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  template:
    spec:
      containers:
      - name: grafana
