management/monitoring/kube-prometheus/imixs-cloud-ingress.yaml
---
###################################################
# Grafana Ingres configuration for Kube Prometheus
###################################################
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: [YOUR-DNS-NAME]
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
